feat: header, auth context middleware

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,5 +1,5 @@
 $defaultFont: Montserrat, Arial, sans-serif;
-$openSansFont: OpenSans, sans-serif;
+$openSansFont: OpenSans, Arial, sans-serif;
 
 @mixin mobile() {
     @media all and (max-width: 1365px) {
