--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -20,6 +20,12 @@ $defaultPageHeight: calc(32px + 56px);
     }
 }
 
+@mixin fromTablet() {
+    @media all and (min-width: 700px) {
+        @content;
+    }
+}
+
 @mixin pc() {
     @media all and (min-width: 1366px) {
         @content;
