--- a/app/scss/variables.scss
+++ b/app/scss/variables.scss
@@ -1,5 +1,5 @@
-$defaultFont: Montserrat, Arial, sans-serif;
-$openSansFont: OpenSans, Arial, sans-serif;
+$defaultFont: LibreFranklin, Arial, sans-serif;
+$juraFont: Jura, Arial, sans-serif;
 $defaultPageHeight: calc(32px + 56px);
 
 @mixin mobile(){
